# warp-plus-bot

./: .gitignore  .replit  LICENSE  pyproject.toml
app/: __main__.py  vars.py
app/bot/: __init__.py
app/bot/plugins/: about.py  faq.py  help.py  start.py  warp_plus.py
app/server/: __init__.py  routes.py
app/utils/: keepalive.py  warp.py
